# django-jinja-render-block

./: CLAUDE.md  README.md  pyproject.toml
tests/: settings.py  test_render_block.py
tests/templates/: base.jinja  child.jinja  simple.jinja  with_context.jinja
